# osu-classic-web

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
components/: Avatar.tsx  Button.tsx  NavBar.tsx  NavButton.tsx  PageBase.tsx
components/navbar/: NavAvatar.tsx  NavBranding.tsx  NavButton.tsx  NavLoginForm.tsx  NavProfileMenu.tsx
contexts/: AuthContext.tsx
lib/: bancho.ts  fetcher.ts  mongodb.ts
lib/models/: beatmap.ts  beatmapSubmit.ts  score.ts  user.ts  webSession.ts
pages/: _app.tsx  beatmaps.tsx  faq.tsx  index.tsx  leaderboard.tsx  profile.tsx  register.tsx
pages/api/: changelog.ts  error.ts  get-beatmaps.ts  get-scores.ts  leaderboard.ts  login.ts  rate.ts  submit-beatmap.ts  submit.ts  update-data.ts  update.ts  verify-token.ts  web-login.ts  web-logout.ts  web-register.ts
pages/api/beatmap-submit/: get-beatmap-topic.ts  get-id.ts  post.ts  upload.ts
pages/api/user/[id]/: avatar.ts  info.ts  rank.ts  username.ts
public/release/: hashes.json
rust/osu-parser-wasm/: .gitignore  Cargo.toml
rust/osu-parser-wasm/src/: lib.rs
rust/osz2-wasm/: Cargo.toml
rust/osz2-wasm/src/: lib.rs
styles/: globals.scss
