[package]
name = "osz2-wasm"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
osz2 = { path = "../../../../osu-rs/osz2" }
wasm-bindgen = { version = "0.2.78", features = ["serde-serialize"] }